tests/invalid/mostly_uniq_1.err_exp
mostly_uniq_1.m:009: In [38;5;87m`my_main'(di, uo):[39;49m
mostly_uniq_1.m:009:   error: [38;5;203m`multi'[39;49m is not a valid determinism for a
mostly_uniq_1.m:009:   predicate that has I/O state arguments. The valid
mostly_uniq_1.m:009:   determinisms for such predicates are [38;5;40m`det',[39;49m [38;5;40m`cc_multi'[39;49m
mostly_uniq_1.m:009:   and [38;5;40m`erroneous',[39;49m since the I/O state can be neither
mostly_uniq_1.m:009:   duplicated nor destroyed.
mostly_uniq_1.m:023: In clause for `my_main(di, uo)':
mostly_uniq_1.m:023:   in argument 2 of call to predicate `io.write_int'/3:
mostly_uniq_1.m:023:   mode error: variable [38;5;87m`STATE_VARIABLE_IO_0'[39;49m has
mostly_uniq_1.m:023:   instantiatedness [38;5;203m`mostly_unique',[39;49m
mostly_uniq_1.m:023:   expected instantiatedness was [38;5;40m`unique'.[39;49m
mostly_uniq_1.m:023:   This kind of uniqueness mismatch is usually caused by
mostly_uniq_1.m:023:   doing [38;5;226minput/output[39;49m or [38;5;226msome other kind of destructive[39;49m
mostly_uniq_1.m:023:   [38;5;226mupdate[39;49m [38;5;203min a context where it can be backtracked over,[39;49m
mostly_uniq_1.m:023:   such as the condition of an if-then-else.
